--- a/www/index.html
+++ b/www/index.html
@@ -6,5 +6,7 @@
   </head>
   <body>
     <div id="page"></div>
+    <script src="js/jquery.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
